--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,15 @@
 {
+    "version": 2,
+    "builds": [
+      {
+        "src": "next.config.js",
+        "use": "@vercel/next"
+      }
+    ],
     "rewrites": [
       {
         "source": "/(.*)",
-        "destination": "/index.html"
+        "destination": "/"
       }
     ]
   }
